# ipydagred3

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  appveyor.yml  azure-pipelines.yml  codecov.yml  ipydagre-d3.json  ipydagred3.json  jest.config.js  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  webpack.config.js
.github/workflows/: build.yml  publish.yml
binder/: postBuild  requirements.txt
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/examples/: example.ipynb  tooltip.ipynb
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipydagre-d3/: __init__.py  _frontend.py  _version.py  example.py
ipydagre-d3/nbextension/: __init__.py
ipydagre-d3/nbextension/static/: extension.js
ipydagre-d3/tests/: conftest.py  test_example.py  test_nbextension_path.py
ipydagred3/: __init__.py  _version.py  edge.py  graph.py  node.py  widget.py
ipydagred3/extension/: install.json
ipydagred3/nbextension/: __init__.py
ipydagred3/nbextension/static/: extension.js
ipydagred3/tests/: conftest.py  test_nbextension_path.py
ipydagred3/tests/js/: activate.test.ts
js/: .eslintrc.js  babel.config.js  jest.config.js  package.json  tsconfig.json  webpack.config.js
js/src/: extension.js  extension.ts  model.js  model.ts  plugin.js  plugin.ts  version.js  view.js  view.ts  widget.js  widget.ts
js/style/: index.css
js/tests/: activate.test.js  activate.test.ts  export.test.js
src/: extension.ts  index.ts  model.ts  plugin.ts  version.ts  view.ts  widget.ts
