[build-system]
requires = [
    "hatchling>=1.3.1",
    "hatch-jupyter-builder",
    "jupyterlab>=4,<5",
]
build-backend = "hatchling.build"

[project]
name = "ipydagred3"
description = "ipywidgets wrapper around dagre-d3"
version = "0.4.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Tim Paine", email = "t.paine154@gmail.com" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "Widgets",
    "IPython",
    "Graph",
    "Data",
    "DAG",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "ipykernel",
    "ipywidgets>=7.5.1",
]

[project.optional-dependencies]
develop = [
    "check-manifest",
    "ruff",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/timkpaine/ipydagred3"
homepage = "https://github.com/timkpaine/ipydagred3"

[tool.check-manifest]
ignore = [
	"ipydagred3/labextension/**",
	"ipydagred3/nbextension/**",
	"js/**"
]

[tool.hatch.build]
artifacts = [
    "ipydagred3/nbextension/static/index.*",
    "ipydagred3/labextension"
]

[tool.hatch.build.targets.wheel.shared-data]
"ipydagred3/nbextension" = "share/jupyter/nbextensions/ipydagred3"
"ipydagred3/labextension" = "share/jupyter/labextensions/ipydagred3"
"ipydagred3/extension/install.json" = "share/jupyter/labextensions/ipydagred3/install.json"
"ipydagred3/extension/ipydagred3.json" = "etc/jupyter/nbconfig/notebook.d/ipydagred3.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "binder",
    "docs",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipydagred3/nbextension/static/index.js",
    "ipydagred3/labextension/package.json",
]
skip-if-exists = [
    "ipydagred3/nbextension/static/index.js",
    "ipydagred3/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
