[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=200

[bumpversion]
current_version = 0.3.1
commit = True
tag = False

[bumpversion:file:ipydagred3/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:js/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"
