[bumpversion]
current_version = 0.3.4
commit = True
tag = False

[bdist_wheel]
universal = 1

[metadata]
description_file = README.md
long_description_content_type = text/markdown

[flake8]
ignore = E203, W503
max-line-length = 200

[bumpversion:file:ipydagred3/_version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:js/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[check-manifest]
ignore = 
	ipydagred3/labextension/**
	ipydagred3/nbextension/**
	js/**
